--- a/static/json/languages/ar_AR.json
+++ b/static/json/languages/ar_AR.json
@@ -439,8 +439,11 @@
       "names": {
         "send": "أرسل",
         "swap": "تبديل",
+        "bridge": "جسر",
+        "get": "احصل",
         "my_wallets": "محافظي",
         "my_contacts": "جهات الاتصال الخاصة بي",
+        "approvals": "الموافقات",
         "my_tokens": "الرموز الخاصة بي",
         "my_tokens_watched": "رموز",
         "my_nfts": "NFTs الخاصة بي",
@@ -473,6 +476,7 @@
         "wallets_and_keys": "المحافظ والمفاتيح",
         "view_full_screen": "عرض كامل الشاشة",
         "view_token": "عرض الرمز",
+        "view_token_details": "عرض تفاصيل %{symbol}",
         "send_token": "إرسال الرمز",
         "swap_token": "تبديل الرمز",
         "copy_token_address": "نسخ عنوان العقد",
@@ -491,14 +495,17 @@
         "disable_flashbots": "تعطيل Flashbots"
       },
       "search_tags": {
-        "swap": "الجسر",
-        "my_wallets": "التبديل",
-        "my_contacts": "جهة اتصال، جهات الاتصال",
+        "swap": "شراء, بيع, تداول, طلب, تبادل, دكس, طرق",
+        "bridge": "تحويل, سلسلة, طرق",
+        "get": "مبادلة, جسر",
+        "my_wallets": "ماي, التبديل",
+        "my_contacts": "يا",
         "my_tokens_watched": "يا",
         "my_nfts_watched": "يا",
         "view_profile": "الملف الشخصي، المعرض، ENS، NFTs",
         "testnet_mode": "تبديل، شبكات، شبكات الاختبار",
         "developer_tools": "تبديل، شبكات، مطور، شبكات الاختبار",
+        "approvals": "ألغِ، الرموز، الشعارات الرمزية، العقود",
         "settings": "التفضيلات",
         "network_settings": "شبكات الاختبار، مطور، شبكات",
         "my_qr_code_watched": "يا",
@@ -846,6 +853,7 @@
     "current_base_fee": "الرسوم الأساسية الحالية",
     "max_base_fee": "الرسوم الأساسية القصوى",
     "miner_tip": "تلميح المعدن",
+    "gas_price": "سعر الغاز",
     "max_transaction_fee": "الرسوم القصوى للمعاملة",
     "transaction_speed": "سرعة المعاملة",
     "cancel": "الغاء",
@@ -1267,6 +1275,7 @@
     "activity": "النشاط",
     "nfts": "NFTs",
     "points": "النقاط",
+    "rewards": "المكافآت",
     "tokens": "رموز"
   },
   "activity": {
@@ -1385,12 +1394,18 @@
     "check_back_soon_header": "تحقق مرة أخرى قريباً",
     "check_back_soon_description": "النقاط غير متوفرة حالياً\nتحقق مجدداً لاستخدام نقاط الرينبو",
     "your_rank": "تصنيفك",
+    "my_points": "نقاطي",
+    "rank": "الترتيب",
+    "ranking": "الترتيب #%{rank}",
     "unranked": "غير مصنف",
+    "no_weekly_rank": "لا يوجد ترتيب أسبوعي",
     "points_to_rank": "%{rank_cutoff} نقاط للتصنيف",
+    "top_holders": "أصحاب النقاط الأعلى",
     "next_drop": "الإصدار القادم",
     "leaderboard": "سلم المتصدرين",
-    "referral_code": "رمز الإحالة",
-    "referral_code_description": "اكسب النقاط بإحالة الأصدقاء بعد إجرائهم تبادل بقيمة 100 دولار عبر Rainbow",
+    "referral_code": "إحالة الأصدقاء",
+    "referral_code_description": "اكسب النقاط عندما يقوم المحالون بالمبادلة مقابل 100$ عبر Rainbow، بالإضافة إلى حصولك على 10٪ من النقاط التي يكسبها المحالون",
+    "referral_earnings": "%{earnings} نقاط",
     "copied_referral_code": "تم نسخ رمز الإحالة!",
     "copied_referral_link": "تم نسخ رابط الإحالة!",
     "out_of_current_total_points": "من إجمالي نقاط %{total} الحالية",
@@ -1455,6 +1470,40 @@
       "your_earnings": "أرباحك الأسبوع الماضي",
       "view_breakdown": "اعرض تفاصيل أرباحك الأسبوعية",
       "view_now": "اعرض الآن"
+    },
+    "rewards": {
+      "counting_points": "> جارٍ احتساب النقاط المكتسبة...",
+      "calculating_referrals": "> جاري حساب المحالين...",
+      "allocating_earnings": "> جاري تخصيص أرباحك...",
+      "claiming_your_reward": "المطالبة بمكافأتك",
+      "done": "تم",
+      "in_eth": "في ETH",
+      "your_rewards": "مكافآتك",
+      "amount_in_eth": "+ %{amount} ETH",
+      "ready_to_spend": "ETH الخاص بك في محفظتك ومتاح للإنفاق. أنت جاهز الآن.",
+      "keep_earning": "استمر في كسب النقاط ومشاركتك من مكافآت Rainbow عن طريق المبادلة، الجسور، السك، إحالة الأصدقاء، وأكثر",
+      "use_rainbow": "كلما استخدمت Rainbow أكثر، كلما حصلت على مكافآت أكثر",
+      "choose_claim_network": "اختر شبكة المطالبة",
+      "coming_soon": "قريبا",
+      "available_to_claim": "متاح للمطالبة",
+      "program_earnings": "لمستخدمي Rainbow حصلوا على",
+      "my_earnings": "أرباحي",
+      "claimed_earnings": "الأرباح التي تم المطالبة بها",
+      "current_value": "القيمة الحالية",
+      "earn_eth_rewards": "كسب مكافآت ETH",
+      "points_explanation": "سيتلقى أكبر الكاسبين للنقاط الأسبوعية توزيعًا أسبوعيًا من ETH المكتسب بصعوبة من Rainbow. جمع النقاط عن طريق المبادلة أو التعامل في Rainbow، استخدام التطبيقات اللامركزية، أو إحالة الأصدقاء.",
+      "your_reward_is_ready": "> مكافأتك جاهزة",
+      "claim_complete": "> المطالبة مكتملة",
+      "already_claimed": "> تم المطالبة بمكافأتك بالفعل",
+      "no_claim": "> ليس لديك مكافأة للمطالبة بها في هذا الوقت",
+      "earned_last_week": "تم الحصول على النقاط الأسبوع الماضي",
+      "my_referrals": "الإحالات",
+      "claim_reward": "المطالبة %{reward}",
+      "free_to_claim": "مجاني للمطالبة",
+      "has_bridge_fee": "يوجد رسوم جسر",
+      "claim_failed": "فشل في المطالبة. يرجى المحاولة مرة أخرى.",
+      "claim_success_bridge_failed": "نجاح المطالبة ولكن لم يتم جسر الأموال.",
+      "my_rewards": "مكافآتي"
     }
   },
   "speed_up_and_cancel": {
