--- a/static/json/languages/es_419.json
+++ b/static/json/languages/es_419.json
@@ -439,8 +439,11 @@
       "names": {
         "send": "Enviar",
         "swap": "Intercambiar",
+        "bridge": "Puente",
+        "get": "Obtener",
         "my_wallets": "Mis monederos",
         "my_contacts": "Mis Contactos",
+        "approvals": "Aprobaciones",
         "my_tokens": "Mis tokens",
         "my_tokens_watched": "Tokens",
         "my_nfts": "Mis NFTs",
@@ -473,6 +476,7 @@
         "wallets_and_keys": "Billeteras y Claves",
         "view_full_screen": "Ver Pantalla Completa",
         "view_token": "Ver Token",
+        "view_token_details": "Ver detalles de %{symbol}",
         "send_token": "Enviar Token",
         "swap_token": "Cambiar Token",
         "copy_token_address": "Copiar Dirección del Contrato del Token",
@@ -491,14 +495,17 @@
         "disable_flashbots": "Desactivar Flashbots"
       },
       "search_tags": {
-        "swap": "puente",
-        "my_wallets": "cambiar",
-        "my_contacts": "contacto, contactos",
+        "swap": "comprar, vender, intercambiar, ordenar, intercambiar, dex, rutas",
+        "bridge": "transferir, cadena, rutas",
+        "get": "intercambiar, puente",
+        "my_wallets": "mi, cambiar",
+        "my_contacts": "mis",
         "my_tokens_watched": "mis",
         "my_nfts_watched": "mis",
         "view_profile": "perfil, galería, ens, nfts",
         "testnet_mode": "alternar, redes, testnets",
         "developer_tools": "alternar, redes, desarrollador, testnets",
+        "approvals": "revocar, tokens, nfts, contratos",
         "settings": "preferencias",
         "network_settings": "testnets, desarrollador, redes",
         "my_qr_code_watched": "mis",
@@ -846,6 +853,7 @@
     "current_base_fee": "Tarifa base actual",
     "max_base_fee": "Tarifa base máxima",
     "miner_tip": "Propina al minero",
+    "gas_price": "Precio del Gas",
     "max_transaction_fee": "Tarifa máxima de transacción",
     "transaction_speed": "Velocidad de transacción",
     "cancel": "Cancelar",
@@ -1267,6 +1275,7 @@
     "activity": "Actividad",
     "nfts": "NFTs",
     "points": "Puntos",
+    "rewards": "Recompensas",
     "tokens": "Tokens"
   },
   "activity": {
@@ -1385,12 +1394,18 @@
     "check_back_soon_header": "Vuelve Pronto",
     "check_back_soon_description": "Los puntos no están disponibles actualmente.\nVuelve pronto para seguir usando Puntos Rainbow.",
     "your_rank": "Tu rango",
+    "my_points": "Mis Puntos",
+    "rank": "Rango",
+    "ranking": "Rango #%{rank}",
     "unranked": "Sin rango",
+    "no_weekly_rank": "Sin Rango Semanal",
     "points_to_rank": "%{rank_cutoff} puntos para clasificar",
+    "top_holders": "Principales Titulares de Puntos",
     "next_drop": "Próxima entrega",
     "leaderboard": "Tabla de posiciones",
-    "referral_code": "Código de Referido",
-    "referral_code_description": "Gana puntos refiriendo amigos que intercambien $100 a través de Rainbow",
+    "referral_code": "Referir Amigos",
+    "referral_code_description": "Gana puntos cuando tus referidos intercambien $100 a través de Rainbow, además gana el 10% de los puntos que tus referidos ganen",
+    "referral_earnings": "%{earnings} puntos",
     "copied_referral_code": "¡Código de referido copiado!",
     "copied_referral_link": "¡Enlace de referido copiado!",
     "out_of_current_total_points": "De %{total} puntos totales actuales",
@@ -1455,6 +1470,40 @@
       "your_earnings": "Tus Ganancias La Semana Pasada",
       "view_breakdown": "Ver el desglose de tus ganancias semanales",
       "view_now": "Ver Ahora"
+    },
+    "rewards": {
+      "counting_points": "> Contabilizando puntos ganados...",
+      "calculating_referrals": "> Calculando tus referidos...",
+      "allocating_earnings": "> Asignando tus ganancias...",
+      "claiming_your_reward": "RECLAMANDO TU RECOMPENSA",
+      "done": "Hecho",
+      "in_eth": "En ETH",
+      "your_rewards": "Tus recompensas",
+      "amount_in_eth": "+ %{amount} ETH",
+      "ready_to_spend": "Tu ETH está en tu cartera y listo para gastar. Estás listo.",
+      "keep_earning": "Sigue ganando puntos y tu parte de las recompensas de Rainbow intercambiando, puenteando, acuñando, refiriendo amigos y más",
+      "use_rainbow": "Cuanto más uses Rainbow, más serás recompensado",
+      "choose_claim_network": "Elige Red de Reclamo",
+      "coming_soon": "Próximamente",
+      "available_to_claim": "Disponible para Reclamar",
+      "program_earnings": "Los usuarios de Rainbow han ganado",
+      "my_earnings": "Mis Ganancias",
+      "claimed_earnings": "Ganancias Reclamadas",
+      "current_value": "Valor Actual",
+      "earn_eth_rewards": "Gana Recompensas en ETH",
+      "points_explanation": "Los principales ganadores de puntos semanales recibirán un airdrop semanal del ETH ganado con esfuerzo por Rainbow. Colecciona puntos intercambiando o transaccionando en Rainbow, usando dapps, o refiriendo amigos.",
+      "your_reward_is_ready": "> Tu recompensa está lista",
+      "claim_complete": "> Reclamo Completado",
+      "already_claimed": "> Tu recompensa ya ha sido reclamada",
+      "no_claim": "> No tienes ninguna recompensa para reclamar en este momento",
+      "earned_last_week": "Ganado la Semana Pasada",
+      "my_referrals": "Referidos",
+      "claim_reward": "Reclamar %{reward}",
+      "free_to_claim": "Gratis para Reclamar",
+      "has_bridge_fee": "Tiene Tarifa de Puente",
+      "claim_failed": "Reclamo Fallido. Por favor, intenta de nuevo.",
+      "claim_success_bridge_failed": "Reclamo Exitoso pero los fondos no fueron puenteados.",
+      "my_rewards": "Mis Recompensas"
     }
   },
   "speed_up_and_cancel": {
