--- a/static/json/languages/fr_FR.json
+++ b/static/json/languages/fr_FR.json
@@ -439,8 +439,11 @@
       "names": {
         "send": "Envoyer",
         "swap": "Échanger",
+        "bridge": "Pont",
+        "get": "Obtenir",
         "my_wallets": "Mes portefeuilles",
         "my_contacts": "Mes contacts",
+        "approvals": "Autorisations",
         "my_tokens": "Mes jetons",
         "my_tokens_watched": "Jetons",
         "my_nfts": "Mes NFTs",
@@ -473,6 +476,7 @@
         "wallets_and_keys": "Portefeuilles et clés",
         "view_full_screen": "Plein écran",
         "view_token": "Voir le jeton",
+        "view_token_details": "Voir les informations de %{symbol}",
         "send_token": "Envoyer le jeton",
         "swap_token": "Échanger le jeton",
         "copy_token_address": "Copier l'adresse du contrat de jeton",
@@ -491,14 +495,17 @@
         "disable_flashbots": "Désactiver Flashbots"
       },
       "search_tags": {
-        "swap": "pont",
-        "my_wallets": "changer",
-        "my_contacts": "contact, contacts",
+        "swap": "acheter, vendre, échanger, commander, échange, dex, itinéraires",
+        "bridge": "transférer, chaîne, itinéraires",
+        "get": "échanger, transférer",
+        "my_wallets": "mon, changer",
+        "my_contacts": "mes",
         "my_tokens_watched": "mes",
         "my_nfts_watched": "mes",
         "view_profile": "profil, galerie, ens, nfts",
         "testnet_mode": "basculer, réseaux, testnets",
         "developer_tools": "basculer, réseaux, développeur, testnets",
+        "approvals": "révoquer, tokens, nfts, contrats",
         "settings": "préférences",
         "network_settings": "testnets, développeur, réseaux",
         "my_qr_code_watched": "mes",
@@ -846,6 +853,7 @@
     "current_base_fee": "Frais d'exécution actuels",
     "max_base_fee": "Frais de base maximum",
     "miner_tip": "Pourboire aux mineurs",
+    "gas_price": "Prix du gaz",
     "max_transaction_fee": "Frais de transaction maximum",
     "transaction_speed": "Vitesse de transaction",
     "cancel": "Annuler",
@@ -1267,6 +1275,7 @@
     "activity": "Activité",
     "nfts": "NFTs",
     "points": "Points",
+    "rewards": "Rewards :)",
     "tokens": "Jetons"
   },
   "activity": {
@@ -1385,12 +1394,18 @@
     "check_back_soon_header": "Revenez bientôt",
     "check_back_soon_description": "Les points sont actuellement indisponibles.\nRevenez bientôt pour continuer à utiliser les Points Rainbow.",
     "your_rank": "Votre classement",
+    "my_points": "Mes Points",
+    "rank": "Rang",
+    "ranking": "Rang #%{rank}",
     "unranked": "Non classé",
+    "no_weekly_rank": "Pas de rang hebdomadaire",
     "points_to_rank": "%{rank_cutoff} points pour être classé",
+    "top_holders": "Top Points Holders",
     "next_drop": "Prochaine distribution",
     "leaderboard": "Classement",
-    "referral_code": "Code de parrainage",
-    "referral_code_description": "Gagnez des points en parrainant des amis après un échange de $100 via Rainbow",
+    "referral_code": "Parrainez des amis",
+    "referral_code_description": "Gagnez des points lorsque vos parrainages échangent 100 $ via Rainbow, et gagnez 10 % des points que vos parrainages gagnent",
+    "referral_earnings": "%{earnings} points",
     "copied_referral_code": "Code de parrainage copié !",
     "copied_referral_link": "Lien de parrainage copié !",
     "out_of_current_total_points": "Sur %{total} points totaux actuels",
@@ -1455,6 +1470,40 @@
       "your_earnings": "Vos gains de la semaine dernière",
       "view_breakdown": "Voir le détail de vos gains hebdomadaires",
       "view_now": "Voir maintenant"
+    },
+    "rewards": {
+      "counting_points": "> Calcul des points gagnés...",
+      "calculating_referrals": "> Calcul de vos parrainages...",
+      "allocating_earnings": "> Attribution de vos gains...",
+      "claiming_your_reward": "RÉCLAMER VOTRE RÉCOMPENSE",
+      "done": "Terminé",
+      "in_eth": "En ETH",
+      "your_rewards": "Vos récompenses",
+      "amount_in_eth": "+ %{amount} ETH :)",
+      "ready_to_spend": "Votre ETH est dans votre portefeuille et prêt à être dépensé. Vous êtes prêt.",
+      "keep_earning": "Continuez à gagner des points et votre part des récompenses Rainbow en effectuant des échanges, des pontages, des mint, en parrainant des amis, et plus encore",
+      "use_rainbow": "Plus vous utilisez Rainbow, plus vous serez récompensé",
+      "choose_claim_network": "Choisir le réseau de réclamation",
+      "coming_soon": "Bientôt Disponible",
+      "available_to_claim": "Disponible pour réclamation",
+      "program_earnings": "Les utilisateurs de Rainbow ont gagné",
+      "my_earnings": "Mes Gains",
+      "claimed_earnings": "Gains Réclamés",
+      "current_value": "Valeur Actuelle",
+      "earn_eth_rewards": "Gagnez des récompenses ETH",
+      "points_explanation": "Les meilleurs gagnants de points hebdomadaires recevront un largage hebdomadaire de l'ETH durement gagné par Rainbow. Collectez des points en effectuant des échanges ou des transactions dans Rainbow, en utilisant des dapps, ou en parrainant des amis.",
+      "your_reward_is_ready": "> Votre récompense est prête",
+      "claim_complete": "> Réclamation Terminée",
+      "already_claimed": "> Votre récompense a déjà été réclamée",
+      "no_claim": "> Vous n'avez pas de récompense à réclamer pour le moment",
+      "earned_last_week": "Gagné la semaine dernière",
+      "my_referrals": "Parrainages",
+      "claim_reward": "Réclamer %{reward}",
+      "free_to_claim": "Gratuit à réclamer",
+      "has_bridge_fee": "Frais de pont",
+      "claim_failed": "Réclamation échouée. Veuillez réessayer.",
+      "claim_success_bridge_failed": "Réclamation réussie mais les fonds n'ont pas été transférés.",
+      "my_rewards": "Mes Récompenses"
     }
   },
   "speed_up_and_cancel": {
