--- a/static/json/languages/hi_IN.json
+++ b/static/json/languages/hi_IN.json
@@ -439,8 +439,11 @@
       "names": {
         "send": "भेजें",
         "swap": "स्वैप करें",
+        "bridge": "ब्रिज",
+        "get": "प्राप्त करें",
         "my_wallets": "मेरे वॉलेट",
         "my_contacts": "मेरे संपर्क",
+        "approvals": "अनुमतियाँ",
         "my_tokens": "मेरे टोकन",
         "my_tokens_watched": "टोकन्स",
         "my_nfts": "मेरे NFTs",
@@ -473,6 +476,7 @@
         "wallets_and_keys": "वॉलेट और कुंजी",
         "view_full_screen": "फ़ुल स्क्रीन देखें",
         "view_token": "टोकन देखें",
+        "view_token_details": "%{symbol} विवरण देखें",
         "send_token": "टोकन भेजें",
         "swap_token": "टोकन बदलें",
         "copy_token_address": "टोकन कॉन्ट्रैक्ट पता कॉपी करें",
@@ -491,14 +495,17 @@
         "disable_flashbots": "Flashbots अक्षम करें"
       },
       "search_tags": {
-        "swap": "सेतु",
-        "my_wallets": "स्विच",
-        "my_contacts": "संपर्क, संपर्क",
+        "swap": "खरीद, बेच, व्यापार, ऑर्डर, एक्सचेंज, डेक्स, रूट्स",
+        "bridge": "ट्रांसफर, चेन, रूट्स",
+        "get": "स्वैप, ब्रिज",
+        "my_wallets": "मेरा, स्विच",
+        "my_contacts": "मेरा",
         "my_tokens_watched": "मेरा",
         "my_nfts_watched": "मेरा",
         "view_profile": "प्रोफ़ाइल, गैलरी, ENS, NFTs",
         "testnet_mode": "टॉगल, नेटवर्क्स, टेस्टनेट्स",
         "developer_tools": "टॉगल, नेटवर्क्स, डेवलपर, टेस्टनेट्स",
+        "approvals": "रद्द करें, टोकन्स, NFTs, अनुबंध",
         "settings": "प्राथमिकताएं",
         "network_settings": "टेस्टनेट्स, डेवलपर, नेटवर्क्स",
         "my_qr_code_watched": "मेरा",
@@ -846,6 +853,7 @@
     "current_base_fee": "वर्तमान बेस शुल्क",
     "max_base_fee": "अधिकतम बेस शुल्क",
     "miner_tip": "माइनर टिप",
+    "gas_price": "गैस की कीमत",
     "max_transaction_fee": "अधिकतम लेनदेन शुल्क",
     "transaction_speed": "लेनदेन की गति",
     "cancel": "रद्द करें",
@@ -1267,6 +1275,7 @@
     "activity": "गतिविधि",
     "nfts": "NFTs",
     "points": "अंक",
+    "rewards": "पुरस्कार",
     "tokens": "टोकन"
   },
   "activity": {
@@ -1385,12 +1394,18 @@
     "check_back_soon_header": "जल्दी ही वापस देखें",
     "check_back_soon_description": "अंक इस समय उपलब्ध नहीं हैं।\nजल्द ही वापस जांचें ताकि आप Rainbow अंकों का उपयोग जारी रख सकें।",
     "your_rank": "आपका रैंक",
+    "my_points": "मेरे अंक",
+    "rank": "रैंक",
+    "ranking": "रैंक #%{rank}",
     "unranked": "अवर्गीकृत",
+    "no_weekly_rank": "कोई साप्ताहिक रैंक नहीं",
     "points_to_rank": "%{rank_cutoff} अंक रैंक के लिए",
+    "top_holders": "शीर्ष अंक धारक",
     "next_drop": "अगली ड्रॉप",
     "leaderboard": "लीडरबोर्ड",
-    "referral_code": "रेफरल कोड",
-    "referral_code_description": "दोस्तों को रेफर करें और Rainbow के जरिए $100 अदला-बदली करने पर पॉइंट्स कमाएं",
+    "referral_code": "मित्रों को संदर्भित करें",
+    "referral_code_description": "जब आपके रेफरल Rainbow के माध्यम से $100 का स्वैप करते हैं तो अंक अर्जित करें, साथ ही आपके रेफरल द्वारा अर्जित अंकों का 10% प्राप्त करें",
+    "referral_earnings": "%{earnings} अंक",
     "copied_referral_code": "रेफरल कोड की प्रतिलिपि बनाई गई!",
     "copied_referral_link": "रेफरल लिंक की प्रतिलिपि बनाई गई!",
     "out_of_current_total_points": "%{total} कुल अंकों में से",
@@ -1455,6 +1470,40 @@
       "your_earnings": "आपकी पिछले सप्ताह की कमाई",
       "view_breakdown": "अपनी साप्ताहिक कमाई का विवरण देखें",
       "view_now": "अभी देखें"
+    },
+    "rewards": {
+      "counting_points": "> अर्जित अंक गिने जा रहे हैं...",
+      "calculating_referrals": "> आपके रेफरल की गणना हो रही है...",
+      "allocating_earnings": "> आपकी कमाई को आवंटित किया जा रहा है...",
+      "claiming_your_reward": "आपका पुरस्कार का दावा हो रहा है",
+      "done": "हो गया",
+      "in_eth": "ETH में",
+      "your_rewards": "आपके पुरस्कार",
+      "amount_in_eth": "+ %{amount} ETH",
+      "ready_to_spend": "आपकी ETH आपके वॉलेट में है और खर्च के लिए तैयार है। सब ठीक है।",
+      "keep_earning": "स्वैपिंग, ब्रिजिंग, मिंटिंग, दोस्तों को संदर्भित करने और अधिक के द्वारा अंक अर्जित करते रहें और अपने हिस्से का रेनबो पुरस्कार प्राप्त करें",
+      "use_rainbow": "जितना अधिक आप Rainbow का उपयोग करते हैं, उतना अधिक आप पुरस्कृत होंगे",
+      "choose_claim_network": "क्लेम नेटवर्क चुनें",
+      "coming_soon": "जल्द आ रहा है",
+      "available_to_claim": "दावा करने के लिए उपलब्ध",
+      "program_earnings": "Rainbow उपयोगकर्ताओं ने अर्जित किया है",
+      "my_earnings": "मेरी कमाई",
+      "claimed_earnings": "दावा की गई कमाई",
+      "current_value": "वर्तमान मूल्य",
+      "earn_eth_rewards": "ETH पुरस्कार अर्जित करें",
+      "points_explanation": "शीर्ष साप्ताहिक अंक प्राप्त करने वालों को Rainbow की खुद की कड़ी मेहनत की ETH का साप्ताहिक एयरड्रॉप प्राप्त होगा। स्वैपिंग या लेनदेन करके, dapps का उपयोग करके, या दोस्तों को संदर्भित करके अंक एकत्र करें।",
+      "your_reward_is_ready": "> आपका पुरस्कार तैयार है",
+      "claim_complete": "> दावा पूरा हुआ",
+      "already_claimed": "> आपके पुरस्कार का पहले ही दावा किया जा चुका है",
+      "no_claim": "> इस समय आपके पास दावा करने के लिए कोई पुरस्कार नहीं है",
+      "earned_last_week": "पिछले सप्ताह अर्जित",
+      "my_referrals": "रेफरल",
+      "claim_reward": "%{reward} दावा करें",
+      "free_to_claim": "दावा करने के लिए निःशुल्क",
+      "has_bridge_fee": "ब्रिज शुल्क है",
+      "claim_failed": "दावा विफल हुआ। कृपया पुन: प्रयास करें।",
+      "claim_success_bridge_failed": "दावा सफल रहा लेकिन फंड को ब्रिज नहीं किया गया।",
+      "my_rewards": "मेरे पुरस्कार"
     }
   },
   "speed_up_and_cancel": {
