--- a/static/json/languages/id_ID.json
+++ b/static/json/languages/id_ID.json
@@ -439,8 +439,11 @@
       "names": {
         "send": "Kirim",
         "swap": "Tukar",
+        "bridge": "Jembatan",
+        "get": "Dapatkan",
         "my_wallets": "Dompet Saya",
         "my_contacts": "Kontak Saya",
+        "approvals": "Persetujuan",
         "my_tokens": "Token Saya",
         "my_tokens_watched": "Tokens",
         "my_nfts": "NFT Saya",
@@ -473,6 +476,7 @@
         "wallets_and_keys": "Dompet & Kunci",
         "view_full_screen": "Lihat Layar Penuh",
         "view_token": "Lihat Token",
+        "view_token_details": "Lihat Detail %{symbol}",
         "send_token": "Kirim Token",
         "swap_token": "Tukar Token",
         "copy_token_address": "Salin Alamat Kontrak Token",
@@ -491,14 +495,17 @@
         "disable_flashbots": "Nonaktifkan Flashbots"
       },
       "search_tags": {
-        "swap": "jembatan",
-        "my_wallets": "beralih",
-        "my_contacts": "kontak, kontak-kontak",
+        "swap": "beli, jual, perdagangan, pesanan, pertukaran, dex, rute",
+        "bridge": "transfer, rantai, rute",
+        "get": "pertukaran, jembatan",
+        "my_wallets": "saya, beralih",
+        "my_contacts": "saya",
         "my_tokens_watched": "saya",
         "my_nfts_watched": "saya",
         "view_profile": "profil, galeri, ens, nfts",
         "testnet_mode": "tombol, jaringan, testnet",
         "developer_tools": "tombol, jaringan, pengembang, testnet",
+        "approvals": "cabut, token, nft, kontrak",
         "settings": "preferensi",
         "network_settings": "testnet, pengembang, jaringan",
         "my_qr_code_watched": "saya",
@@ -846,6 +853,7 @@
     "current_base_fee": "Biaya dasar saat ini",
     "max_base_fee": "Biaya dasar maksimal",
     "miner_tip": "Tip penambang",
+    "gas_price": "Harga Gas",
     "max_transaction_fee": "Biaya transaksi maksimal",
     "transaction_speed": "Kecepatan transaksi",
     "cancel": "Batal",
@@ -1267,6 +1275,7 @@
     "activity": "Aktivitas",
     "nfts": "NFTs",
     "points": "Poin",
+    "rewards": "Hadiah",
     "tokens": "Tokens"
   },
   "activity": {
@@ -1385,12 +1394,18 @@
     "check_back_soon_header": "Periksa Kembali Segera",
     "check_back_soon_description": "Poin saat ini tidak tersedia.\nSilakan cek kembali untuk menggunakan Poin Rainbow.",
     "your_rank": "Peringkat Anda",
+    "my_points": "Poin Saya",
+    "rank": "Peringkat",
+    "ranking": "Peringkat #%{rank}",
     "unranked": "Tidak berperingkat",
+    "no_weekly_rank": "Tidak Ada Peringkat Mingguan",
     "points_to_rank": "%{rank_cutoff} poin untuk peringkat",
+    "top_holders": "Pemegang Poin Tertinggi",
     "next_drop": "Drop Selanjutnya",
     "leaderboard": "Papan Peringkat",
-    "referral_code": "Kode Referal",
-    "referral_code_description": "Dapatkan poin dengan merujuk teman setelah mereka menukar $100 melalui Rainbow",
+    "referral_code": "Ajak Teman",
+    "referral_code_description": "Dapatkan poin ketika ajakan Anda menukar $100 melalui Rainbow, plus dapatkan 10% dari poin yang mereka dapatkan",
+    "referral_earnings": "%{earnings} poin",
     "copied_referral_code": "Kode referal disalin!",
     "copied_referral_link": "Link referal disalin!",
     "out_of_current_total_points": "Dari total %{total} poin saat ini",
@@ -1455,6 +1470,40 @@
       "your_earnings": "Pendapatan Anda Minggu Lalu",
       "view_breakdown": "Lihat rincian pendapatan mingguan Anda",
       "view_now": "Lihat Sekarang"
+    },
+    "rewards": {
+      "counting_points": "> Menghitung poin yang didapat...",
+      "calculating_referrals": "&gt; Menghitung ajakan Anda...",
+      "allocating_earnings": "&gt; Mengalokasikan penghasilan Anda...",
+      "claiming_your_reward": "MENGKLAIM HADIAH ANDA",
+      "done": "Selesai",
+      "in_eth": "Dalam ETH",
+      "your_rewards": "Hadiah Anda",
+      "amount_in_eth": "+ %{amount} ETH",
+      "ready_to_spend": "ETH Anda ada di dompet Anda dan siap digunakan. Anda sudah siap.",
+      "keep_earning": "Terus kumpulkan poin dan bagian Anda dari hadiah Rainbow dengan menukar, menjembatani, mencetak, mengajak teman, dan banyak lagi",
+      "use_rainbow": "Semakin sering Anda menggunakan Rainbow, semakin banyak Anda akan dihargai",
+      "choose_claim_network": "Pilih Jaringan Klaim",
+      "coming_soon": "Segera Hadir",
+      "available_to_claim": "Tersedia untuk Diklaim",
+      "program_earnings": "Pengguna Rainbow telah mendapatkan",
+      "my_earnings": "Penghasilan Saya",
+      "claimed_earnings": "Penghasilan yang Diklaim",
+      "current_value": "Nilai Saat Ini",
+      "earn_eth_rewards": "Dapatkan Hadiah ETH",
+      "points_explanation": "Para pengumpul poin tertinggi mingguan akan menerima airdrop mingguan dari ETH yang diperoleh dengan susah payah oleh Rainbow. Kumpulkan poin dengan menukar atau bertransaksi di Rainbow, menggunakan dapps, atau mengajak teman.",
+      "your_reward_is_ready": "&gt; Hadiah Anda sudah siap",
+      "claim_complete": "&gt; Klaim Selesai",
+      "already_claimed": "&gt; Hadiah Anda sudah diklaim",
+      "no_claim": "&gt; Anda tidak memiliki hadiah untuk diklaim saat ini",
+      "earned_last_week": "Diperoleh Minggu Lalu",
+      "my_referrals": "Ajakannya",
+      "claim_reward": "Klaim %{reward}",
+      "free_to_claim": "Gratis untuk Diklaim",
+      "has_bridge_fee": "Ada Biaya Jembatan",
+      "claim_failed": "Klaim Gagal. Silakan coba lagi.",
+      "claim_success_bridge_failed": "Klaim Sukses tapi dana tidak dijembatani.",
+      "my_rewards": "Hadiah Saya"
     }
   },
   "speed_up_and_cancel": {
