--- a/static/json/languages/ja_JP.json
+++ b/static/json/languages/ja_JP.json
@@ -439,8 +439,11 @@
       "names": {
         "send": "送信する",
         "swap": "スワップ",
+        "bridge": "ブリッジ",
+        "get": "ゲット",
         "my_wallets": "マイウォレット",
         "my_contacts": "連絡先",
+        "approvals": "承認",
         "my_tokens": "マイトークン",
         "my_tokens_watched": "トークン",
         "my_nfts": "私のNFT",
@@ -473,6 +476,7 @@
         "wallets_and_keys": "ウォレットとキー",
         "view_full_screen": "フルスクリーン表示",
         "view_token": "トークンを表示",
+        "view_token_details": "%{symbol}の詳細を表示",
         "send_token": "トークンを送信",
         "swap_token": "トークンを交換",
         "copy_token_address": "トークン契約アドレスをコピー",
@@ -491,14 +495,17 @@
         "disable_flashbots": "Flashbotsを無効にする"
       },
       "search_tags": {
-        "swap": "ブリッジ",
-        "my_wallets": "切り替え",
-        "my_contacts": "連絡先, 連絡先",
+        "swap": "購入、販売、取引、注文、交換、dex、ルート",
+        "bridge": "送金、チェーン、ルート",
+        "get": "スワップ、ブリッジ",
+        "my_wallets": "自分の、切り替え",
+        "my_contacts": "マイ",
         "my_tokens_watched": "マイ",
         "my_nfts_watched": "マイ",
         "view_profile": "プロフィール, ギャラリー, ENS, NFT",
         "testnet_mode": "切り替え、ネットワーク、テストネット",
         "developer_tools": "切り替え、ネットワーク、開発者、テストネット",
+        "approvals": "無効化, トークン, NFT, コントラクト",
         "settings": "設定",
         "network_settings": "テストネット、開発者、ネットワーク",
         "my_qr_code_watched": "マイ",
@@ -846,6 +853,7 @@
     "current_base_fee": "現在の基本手数料",
     "max_base_fee": "最大基本手数料",
     "miner_tip": "マイナーチップ",
+    "gas_price": "ガス価格",
     "max_transaction_fee": "最大トランザクション手数料",
     "transaction_speed": "トランザクションスピード",
     "cancel": "キャンセル",
@@ -1267,6 +1275,7 @@
     "activity": "アクティビティ",
     "nfts": "NFTs",
     "points": "ポイント",
+    "rewards": "報酬",
     "tokens": "トークン"
   },
   "activity": {
@@ -1385,12 +1394,18 @@
     "check_back_soon_header": "もうすぐチェック",
     "check_back_soon_description": "現在ポイントは利用できません。\n後ほど確認して、Rainbowポイントを再利用してください。",
     "your_rank": "ランク",
+    "my_points": "私のポイント",
+    "rank": "ランク",
+    "ranking": "ランク #%{rank}",
     "unranked": "未ランク",
+    "no_weekly_rank": "今週のランクなし",
     "points_to_rank": "%{rank_cutoff} ポイントでランク入り",
+    "top_holders": "トップポイントホルダー",
     "next_drop": "次のドロップ",
     "leaderboard": "リーダーボード",
-    "referral_code": "紹介コード",
-    "referral_code_description": "友達を紹介してRainbowで$100をスワップするとポイントが獲得できます",
+    "referral_code": "友達紹介",
+    "referral_code_description": "紹介者がRainbowを通じて$100をスワップするごとにポイントを獲得し、さらに紹介者が獲得したポイントの10%を獲得します",
+    "referral_earnings": "%{earnings} ポイント",
     "copied_referral_code": "紹介コードをコピーしました！",
     "copied_referral_link": "紹介リンクをコピーしました！",
     "out_of_current_total_points": "現在の合計点中 %{total} 点満点",
@@ -1455,6 +1470,40 @@
       "your_earnings": "先週のあなたの収益",
       "view_breakdown": "週間収益の内訳を見る",
       "view_now": "今すぐ見る"
+    },
+    "rewards": {
+      "counting_points": "> 獲得ポイント計算中...",
+      "calculating_referrals": "> 紹介者を計算中...",
+      "allocating_earnings": "> 収益を配分中...",
+      "claiming_your_reward": "報酬を請求しています",
+      "done": "完了",
+      "in_eth": "ETHで",
+      "your_rewards": "あなたの報酬",
+      "amount_in_eth": "+ %{amount} ETH",
+      "ready_to_spend": "あなたのETHはウォレットにあり、使用する準備ができています。",
+      "keep_earning": "スワップ、ブリッジ、ミント、「友達紹介」などを続けてポイントと報酬を獲得しましょう",
+      "use_rainbow": "Rainbowを使えば使うほど、もっと報酬をもらえます",
+      "choose_claim_network": "請求ネットワークを選択",
+      "coming_soon": "近日公開",
+      "available_to_claim": "請求可能",
+      "program_earnings": "Rainbowのユーザーが獲得しました",
+      "my_earnings": "私の収益",
+      "claimed_earnings": "請求された収益",
+      "current_value": "現在の価値",
+      "earn_eth_rewards": "ETH報酬を獲得",
+      "points_explanation": "トップウィークリーポイント獲得者は、RainbowのハードアーンETHの週のエアドロップを毎週受け取ることができます。Rainbowでのスワップやトランザクション、dappsの使用、友達紹介でポイントを集めましょう。",
+      "your_reward_is_ready": "> 報酬の準備ができました",
+      "claim_complete": "> 請求完了",
+      "already_claimed": "> 報酬はすでに請求されています",
+      "no_claim": "> 現時点では請求可能な報酬はありません",
+      "earned_last_week": "先週稼いだ",
+      "my_referrals": "紹介",
+      "claim_reward": "%{reward}を請求",
+      "free_to_claim": "無料で請求",
+      "has_bridge_fee": "ブリッジ手数料がかかります",
+      "claim_failed": "請求失敗。もう一度試してください。",
+      "claim_success_bridge_failed": "請求成功しましたが、資金はブリッジされませんでした。",
+      "my_rewards": "私の報酬"
     }
   },
   "speed_up_and_cancel": {
