--- a/static/json/languages/ko_KR.json
+++ b/static/json/languages/ko_KR.json
@@ -439,8 +439,11 @@
       "names": {
         "send": "전송",
         "swap": "교환",
+        "bridge": "브릿지",
+        "get": "얻다",
         "my_wallets": "내 지갑들",
         "my_contacts": "내 연락처",
+        "approvals": "승인",
         "my_tokens": "내 토큰들",
         "my_tokens_watched": "토큰",
         "my_nfts": "내 NFTs",
@@ -473,6 +476,7 @@
         "wallets_and_keys": "지갑 & 키",
         "view_full_screen": "전체 화면 보기",
         "view_token": "토큰 보기",
+        "view_token_details": "%{symbol} 세부 정보 보기",
         "send_token": "토큰 보내기",
         "swap_token": "토큰 교환",
         "copy_token_address": "토큰 계약 주소 복사",
@@ -491,14 +495,17 @@
         "disable_flashbots": "플래시봇 비활성화"
       },
       "search_tags": {
-        "swap": "브릿지",
-        "my_wallets": "스위치",
-        "my_contacts": "연락처, 연락처들",
+        "swap": "구매, 판매, 거래, 주문, 교환, 덱스, 경로",
+        "bridge": "전송, 체인, 경로",
+        "get": "교환, 브릿지",
+        "my_wallets": "내, 스위치",
+        "my_contacts": "나의",
         "my_tokens_watched": "나의",
         "my_nfts_watched": "나의",
         "view_profile": "프로필, 갤러리, ENS, NFTs",
         "testnet_mode": "토글, 네트워크, 테스트넷",
         "developer_tools": "토글, 네트워크, 개발자, 테스트넷",
+        "approvals": "토큰, NFT, 계약 취소",
         "settings": "환경설정",
         "network_settings": "테스트넷, 개발자, 네트워크",
         "my_qr_code_watched": "나의",
@@ -846,6 +853,7 @@
     "current_base_fee": "현재 기본 요금",
     "max_base_fee": "최대 기본 요금",
     "miner_tip": "광부 팁",
+    "gas_price": "가스 가격",
     "max_transaction_fee": "최대 거래료",
     "transaction_speed": "거래 속도",
     "cancel": "취소",
@@ -1267,6 +1275,7 @@
     "activity": "활동",
     "nfts": "NFTs",
     "points": "포인트",
+    "rewards": "보상",
     "tokens": "토큰"
   },
   "activity": {
@@ -1385,12 +1394,18 @@
     "check_back_soon_header": "곧 다시 확인하세요",
     "check_back_soon_description": "포인트를 현재 사용할 수 없습니다.\n곧 다시 확인하여 레인보우 포인트를 사용하세요.",
     "your_rank": "당신의 순위",
+    "my_points": "내 포인트",
+    "rank": "순위",
+    "ranking": "순위 #%{rank}",
     "unranked": "순위 없음",
+    "no_weekly_rank": "주간 순위 없음",
     "points_to_rank": "%{rank_cutoff} 포인트가 순위에 필요합니다",
+    "top_holders": "최고 포인트 보유자",
     "next_drop": "다음 드랍",
     "leaderboard": "리더보드",
-    "referral_code": "추천 코드",
-    "referral_code_description": "친구를 추천하고 Rainbow를 통해 $100을 교환하면 포인트를 얻을 수 있습니다",
+    "referral_code": "친구 초대",
+    "referral_code_description": "친구가 Rainbow를 통해 $100를 교환하면 포인트를 획득하고, 친구가 얻은 포인트의 10%를 추가로 획득하세요",
+    "referral_earnings": "%{earnings} 포인트",
     "copied_referral_code": "추천 코드가 복사되었습니다!",
     "copied_referral_link": "추천 링크가 복사되었습니다!",
     "out_of_current_total_points": "현재 총 포인트 중 %{total}",
@@ -1455,6 +1470,40 @@
       "your_earnings": "지난주 수익",
       "view_breakdown": "주간 수익 내역 보기",
       "view_now": "지금 보기"
+    },
+    "rewards": {
+      "counting_points": "> 포인트 산정 중...",
+      "calculating_referrals": "> 참조를 계산 중입니다...",
+      "allocating_earnings": "> 수익을 할당 중입니다...",
+      "claiming_your_reward": "보상을 청구 중",
+      "done": "완료",
+      "in_eth": "이더리움",
+      "your_rewards": "귀하의 보상",
+      "amount_in_eth": "+ %{amount} 이더리움",
+      "ready_to_spend": "귀하의 이더리움이 지갑에 있으며 사용할 준비가 되었습니다. 모든 준비가 완료되었습니다.",
+      "keep_earning": "교환, 브릿징, 민팅, 친구 추천 등을 통해 포인트와 Rainbow 보상을 계속해서 획득하세요",
+      "use_rainbow": "Rainbow를 많이 사용할수록 더 많은 보상을 받을 수 있습니다",
+      "choose_claim_network": "청구 네트워크 선택",
+      "coming_soon": "곧 출시 예정",
+      "available_to_claim": "청구 가능",
+      "program_earnings": "Rainbow 사용자가 획득했습니다",
+      "my_earnings": "내 수익",
+      "claimed_earnings": "청구된 수익",
+      "current_value": "현재 가치",
+      "earn_eth_rewards": "이더리움 보상 획득",
+      "points_explanation": "최고 주간 포인트 획득자에게는 Rainbow의 수고로 번 이더리움이 매주 에어드롭됩니다. Rainbow에서 교환하거나 거래, dapp 사용 또는 친구 추천을 통해 포인트를 모으세요.",
+      "your_reward_is_ready": "> 보상이 준비되었습니다",
+      "claim_complete": "> 청구 완료",
+      "already_claimed": "> 보상이 이미 청구되었습니다",
+      "no_claim": "> 현재 청구할 보상이 없습니다",
+      "earned_last_week": "지난주에 획득",
+      "my_referrals": "추천",
+      "claim_reward": "%{reward} 청구하기",
+      "free_to_claim": "무료로 청구",
+      "has_bridge_fee": "브릿지 수수료 있음",
+      "claim_failed": "청구 실패. 다시 시도해주세요.",
+      "claim_success_bridge_failed": "청구 성공하였으나 자금이 브릿지되지 않았습니다.",
+      "my_rewards": "내 보상"
     }
   },
   "speed_up_and_cancel": {
