--- a/static/json/languages/pt_BR.json
+++ b/static/json/languages/pt_BR.json
@@ -439,8 +439,11 @@
       "names": {
         "send": "Enviar",
         "swap": "Trocar",
+        "bridge": "Bridge",
+        "get": "Obter",
         "my_wallets": "Minhas Carteiras",
         "my_contacts": "Meus Contatos",
+        "approvals": "Aprovações",
         "my_tokens": "Meus Tokens",
         "my_tokens_watched": "Tokens",
         "my_nfts": "Meus NFTs",
@@ -473,6 +476,7 @@
         "wallets_and_keys": "Carteiras e Chaves",
         "view_full_screen": "Ver Tela Cheia",
         "view_token": "Ver Token",
+        "view_token_details": "Ver detalhes de %{symbol}",
         "send_token": "Enviar Token",
         "swap_token": "Trocar Token",
         "copy_token_address": "Copiar Endereço do Contrato do Token",
@@ -491,14 +495,17 @@
         "disable_flashbots": "Desativar Flashbots"
       },
       "search_tags": {
-        "swap": "ponte",
-        "my_wallets": "alternar",
-        "my_contacts": "contato, contatos",
+        "swap": "comprar, vender, negociar, encomendar, trocar, dex, rotas",
+        "bridge": "transferir, cadeia, rotas",
+        "get": "trocar, ponte",
+        "my_wallets": "meu, alternar",
+        "my_contacts": "meus",
         "my_tokens_watched": "meus",
         "my_nfts_watched": "meus",
         "view_profile": "perfil, galeria, ens, nfts",
         "testnet_mode": "alternar, redes, testnets",
         "developer_tools": "alternar, redes, desenvolvedor, testnets",
+        "approvals": "revogar, tokens, nfts, contratos",
         "settings": "preferências",
         "network_settings": "testnets, desenvolvedor, redes",
         "my_qr_code_watched": "meus",
@@ -846,6 +853,7 @@
     "current_base_fee": "Taxa base atual",
     "max_base_fee": "Taxa base máxima",
     "miner_tip": "Gorjeta para mineradores",
+    "gas_price": "Preço do Gás",
     "max_transaction_fee": "Taxa máxima da transação",
     "transaction_speed": "Velocidade da transação",
     "cancel": "Cancelar",
@@ -1267,6 +1275,7 @@
     "activity": "Atividade",
     "nfts": "NFTs",
     "points": "Pontos",
+    "rewards": "Recompensas",
     "tokens": "Tokens"
   },
   "activity": {
@@ -1385,12 +1394,18 @@
     "check_back_soon_header": "Volte em Breve",
     "check_back_soon_description": "Pontos estão indisponíveis no momento.\nVerifique novamente em breve para continuar usando os Pontos Rainbow.",
     "your_rank": "Sua Classificação",
+    "my_points": "Meus Pontos",
+    "rank": "Classificação",
+    "ranking": "Classificação #%{rank}",
     "unranked": "Não classificado",
+    "no_weekly_rank": "Sem Classificação Semanal",
     "points_to_rank": "%{rank_cutoff} pontos para classificar",
+    "top_holders": "Maiores Pontuadores",
     "next_drop": "Próximo Lançamento",
     "leaderboard": "Classificação Geral",
-    "referral_code": "Código de Referência",
-    "referral_code_description": "Ganhe pontos indicando amigos que trocarem $100 através do Rainbow",
+    "referral_code": "Indicar Amigos",
+    "referral_code_description": "Ganhe pontos quando suas indicações trocarem $100 através do Rainbow, além de ganhar 10% dos pontos que suas indicações ganharem",
+    "referral_earnings": "%{earnings} pontos",
     "copied_referral_code": "Código de referência copiado!",
     "copied_referral_link": "Link de referência copiado!",
     "out_of_current_total_points": "De um total de %{total} pontos atuais",
@@ -1455,6 +1470,40 @@
       "your_earnings": "Seus Ganhos na Última Semana",
       "view_breakdown": "Veja o detalhamento dos seus ganhos semanais",
       "view_now": "Ver Agora"
+    },
+    "rewards": {
+      "counting_points": "> Contabilizando pontos ganhos...",
+      "calculating_referrals": "> Calculando suas indicações...",
+      "allocating_earnings": "> Alocando seus ganhos...",
+      "claiming_your_reward": "REIVINDICANDO SUA RECOMPENSA",
+      "done": "Concluído",
+      "in_eth": "Em ETH",
+      "your_rewards": "Suas recompensas",
+      "amount_in_eth": "+ %{amount} ETH",
+      "ready_to_spend": "Seu ETH está na sua carteira e pronto para gastar. Tudo pronto.",
+      "keep_earning": "Continue ganhando pontos e sua parte das recompensas do Rainbow ao trocar, usar a ponte, cunhar, indicar amigos e muito mais",
+      "use_rainbow": "Quanto mais você usa o Rainbow, mais você será recompensado",
+      "choose_claim_network": "Escolher Rede de Reivindicação",
+      "coming_soon": "Em breve",
+      "available_to_claim": "Disponível para Reivindicar",
+      "program_earnings": "Usuários do Rainbow ganharam",
+      "my_earnings": "Meus Ganhos",
+      "claimed_earnings": "Ganhos Reivindicados",
+      "current_value": "Valor Atual",
+      "earn_eth_rewards": "Ganhe Recompensas em ETH",
+      "points_explanation": "Os maiores pontuadores semanais receberão um airdrop semanal do ETH ganho com muito esforço do Rainbow. Colete pontos trocando ou transacionando no Rainbow, usando dapps ou indicando amigos.",
+      "your_reward_is_ready": "> Sua recompensa está pronta",
+      "claim_complete": "> Reivindicação Concluída",
+      "already_claimed": "> Sua recompensa já foi reivindicada",
+      "no_claim": "> Você não tem uma recompensa para reivindicar no momento",
+      "earned_last_week": "Ganhos da Semana Passada",
+      "my_referrals": "Indicações",
+      "claim_reward": "Reivindicar %{reward}",
+      "free_to_claim": "Livre para Reivindicar",
+      "has_bridge_fee": "Possui Taxa de Ponte",
+      "claim_failed": "Reivindicação Falhou. Por favor, tente novamente.",
+      "claim_success_bridge_failed": "Reivindicação Bem-sucedida, mas os fundos não foram enviados pela ponte.",
+      "my_rewards": "Minhas Recompensas"
     }
   },
   "speed_up_and_cancel": {
