--- a/static/json/languages/ru_RU.json
+++ b/static/json/languages/ru_RU.json
@@ -439,8 +439,11 @@
       "names": {
         "send": "Отправить",
         "swap": "Обменять",
+        "bridge": "Мост",
+        "get": "Получить",
         "my_wallets": "Мои кошельки",
         "my_contacts": "Мои контакты",
+        "approvals": "Разрешения",
         "my_tokens": "Мои токены",
         "my_tokens_watched": "Токены",
         "my_nfts": "Мои NFT",
@@ -473,6 +476,7 @@
         "wallets_and_keys": "Кошельки и ключи",
         "view_full_screen": "Просмотр на полный экран",
         "view_token": "Просмотр токена",
+        "view_token_details": "Посмотреть детали %{symbol}",
         "send_token": "Отправить токен",
         "swap_token": "Обменять токен",
         "copy_token_address": "Скопировать адрес контракта токена",
@@ -491,14 +495,17 @@
         "disable_flashbots": "Отключить Flashbots"
       },
       "search_tags": {
-        "swap": "Мост",
-        "my_wallets": "Переключение",
-        "my_contacts": "контакт, контакты",
+        "swap": "купить, продать, обменять, заказать, обмен, dex, маршруты",
+        "bridge": "перевод, цепь, маршруты",
+        "get": "обмен, мост",
+        "my_wallets": "мой, переключение",
+        "my_contacts": "мои",
         "my_tokens_watched": "мои",
         "my_nfts_watched": "мои",
         "view_profile": "профиль, галерея, ens, nft",
         "testnet_mode": "переключатель, сети, тестовые сети",
         "developer_tools": "переключатель, сети, разработчик, тестовые сети",
+        "approvals": "отзывать, токены, нфт, контракты",
         "settings": "настройки",
         "network_settings": "тестовые сети, разработчик, сети",
         "my_qr_code_watched": "мои",
@@ -846,6 +853,7 @@
     "current_base_fee": "Текущая базовая комиссия",
     "max_base_fee": "Максимальная базовая комиссия",
     "miner_tip": "Подсказка майнера",
+    "gas_price": "Цена газа",
     "max_transaction_fee": "Максимальная комиссия за транзакцию",
     "transaction_speed": "Скорость транзакции",
     "cancel": "Отмена",
@@ -1267,6 +1275,7 @@
     "activity": "Активность",
     "nfts": "NFT",
     "points": "Поинты",
+    "rewards": "Награды",
     "tokens": "Токены"
   },
   "activity": {
@@ -1385,12 +1394,18 @@
     "check_back_soon_header": "Загляните позже",
     "check_back_soon_description": "Баллы временно недоступны.\nЗайдите позже, чтобы продолжить использовать Баллы Rainbow.",
     "your_rank": "Ваш ранг",
+    "my_points": "Мои баллы",
+    "rank": "Ранг",
+    "ranking": "Ранг №%{rank}",
     "unranked": "Без ранга",
+    "no_weekly_rank": "Нет недельного ранга",
     "points_to_rank": "%{rank_cutoff} баллов до получения ранга",
+    "top_holders": "Лучшие держатели баллов",
     "next_drop": "Следующий дроп",
     "leaderboard": "Лидеры",
-    "referral_code": "Реферальный код",
-    "referral_code_description": "Зарабатывайте баллы за реферальство друзей после того, как они обменяют $100 через Rainbow",
+    "referral_code": "Пригласить друзей",
+    "referral_code_description": "Зарабатывайте баллы, когда ваши рефералы обменивают $100 через Rainbow, плюс получайте 10% баллов, заработанных вашими рефералами",
+    "referral_earnings": "%{earnings} баллов",
     "copied_referral_code": "Реферальный код скопирован!",
     "copied_referral_link": "Реферальная ссылка скопирована!",
     "out_of_current_total_points": "Из %{total} текущего общего количества очков",
@@ -1455,6 +1470,40 @@
       "your_earnings": "Ваши доходы на прошлой неделе",
       "view_breakdown": "Посмотреть разбивку недельных доходов",
       "view_now": "Посмотреть сейчас"
+    },
+    "rewards": {
+      "counting_points": "> Подсчет заработанных очков...",
+      "calculating_referrals": "> Подсчитываем ваши рефералы...",
+      "allocating_earnings": "> Распределяем ваши заработки...",
+      "claiming_your_reward": "ЗАБИРАЕМ ВАШУ НАГРАДУ",
+      "done": "Готово",
+      "in_eth": "В ETH",
+      "your_rewards": "Ваши награды",
+      "amount_in_eth": "+ %{amount} ETH",
+      "ready_to_spend": "Ваш ETH находится в вашем кошельке и готов к использованию. Всё готово.",
+      "keep_earning": "Продолжайте зарабатывать баллы и свою долю наград Rainbow, обменивая, переводя, создавая токены, приглашая друзей и не только",
+      "use_rainbow": "Чем больше вы используете Rainbow, тем больше наград вы получите",
+      "choose_claim_network": "Выберите сеть для получения",
+      "coming_soon": "Скоро будет",
+      "available_to_claim": "Доступно для получения",
+      "program_earnings": "Пользователи Rainbow заработали",
+      "my_earnings": "Мои заработки",
+      "claimed_earnings": "Полученные заработки",
+      "current_value": "Текущая стоимость",
+      "earn_eth_rewards": "Зарабатывайте ETH-награды",
+      "points_explanation": "Лучшие еженедельные зарабатыватели баллов получат еженедельный airdrop собственного тяжело заработанного ETH Rainbow. Зарабатывайте баллы, обменивая или совершая транзакции в Rainbow, используя dapps или приглашая друзей.",
+      "your_reward_is_ready": "> Ваша награда готова",
+      "claim_complete": "> Получение завершено",
+      "already_claimed": "> Ваша награда уже получена",
+      "no_claim": "> У вас нет награды для получения на данный момент",
+      "earned_last_week": "Заработано на прошлой неделе",
+      "my_referrals": "Рефералы",
+      "claim_reward": "Получить %{reward}",
+      "free_to_claim": "Бесплатно для получения",
+      "has_bridge_fee": "Есть комиссия за мост",
+      "claim_failed": "Не удалось получить. Пожалуйста, попробуйте еще раз.",
+      "claim_success_bridge_failed": "Получение прошло успешно, но средства не были переведены.",
+      "my_rewards": "Мои награды"
     }
   },
   "speed_up_and_cancel": {
