--- a/static/json/languages/th_TH.json
+++ b/static/json/languages/th_TH.json
@@ -439,8 +439,11 @@
       "names": {
         "send": "ส่ง",
         "swap": "แลกเปลี่ยน",
+        "bridge": "สะพาน",
+        "get": "รับ",
         "my_wallets": "Wallet ของฉัน",
         "my_contacts": "รายชื่อผู้ติดต่อของฉัน",
+        "approvals": "การอนุมัติ",
         "my_tokens": "โทเคนของฉัน",
         "my_tokens_watched": "โทเคน",
         "my_nfts": "NFT ของฉัน",
@@ -473,6 +476,7 @@
         "wallets_and_keys": "กระเป๋าสตางค์และคีย์",
         "view_full_screen": "ดูเต็มหน้าจอ",
         "view_token": "ดูโทเคน",
+        "view_token_details": "ดูรายละเอียดของ %{symbol}",
         "send_token": "ส่งโทเคน",
         "swap_token": "สลับโทเคน",
         "copy_token_address": "คัดลอกที่อยู่โทเคนสัญญา",
@@ -491,14 +495,17 @@
         "disable_flashbots": "ปิดการใช้งาน Flashbots"
       },
       "search_tags": {
-        "swap": "สะพาน",
-        "my_wallets": "สลับ",
-        "my_contacts": "ติดต่อ, รายชื่อติดต่อ",
+        "swap": "ซื้อ, ขาย, แลกเปลี่ยน, สั่งซื้อ, เปลี่ยน, dex, เส้นทาง",
+        "bridge": "โอนย้าย, เครือข่าย, เส้นทาง",
+        "get": "เปลี่ยน, โอนย้าย",
+        "my_wallets": "ของฉัน, สลับ",
+        "my_contacts": "ของฉัน",
         "my_tokens_watched": "ของฉัน",
         "my_nfts_watched": "ของฉัน",
         "view_profile": "โปรไฟล์, แกลเลอรี, ens, nfts",
         "testnet_mode": "สลับ, เครือข่าย, เทสเน็ต",
         "developer_tools": "สลับ, เครือข่าย, นักพัฒนา, เทสเน็ต",
+        "approvals": "เพิกถอน, โทเค็น, NFTs, สัญญา",
         "settings": "การตั้งค่า",
         "network_settings": "เทสเน็ต, นักพัฒนา, เครือข่าย",
         "my_qr_code_watched": "ของฉัน",
@@ -846,6 +853,7 @@
     "current_base_fee": "ค่าฐานปัจจุบัน",
     "max_base_fee": "ค่าฐานสูงสุด",
     "miner_tip": "เคล็ดลับขุดแร่",
+    "gas_price": "ราคาก๊าซ",
     "max_transaction_fee": "ค่าธรรมเนียมการทำธุรกรรมสูงสุด",
     "transaction_speed": "ความเร็วการทำธุรกรรม",
     "cancel": "ยกเลิก",
@@ -1267,6 +1275,7 @@
     "activity": "กิจกรรม",
     "nfts": "NFTs",
     "points": "คะแนน",
+    "rewards": "รางวัล",
     "tokens": "โทเคน"
   },
   "activity": {
@@ -1385,12 +1394,18 @@
     "check_back_soon_header": "กลับมาเร็วๆ นี้",
     "check_back_soon_description": "ไม่สามารถใช้งานแต้มได้ในขณะนี้\nกรุณากลับมาใหม่เพื่อใช้งาน Rainbow Points ต่อ",
     "your_rank": "อันดับของคุณ",
+    "my_points": "คะแนนของฉัน",
+    "rank": "อันดับ",
+    "ranking": "อันดับ #%{rank}",
     "unranked": "ไม่มีอันดับ",
+    "no_weekly_rank": "ไม่มีอันดับรายสัปดาห์",
     "points_to_rank": "%{rank_cutoff} แต้มเพื่อจัดอันดับ",
+    "top_holders": "ผู้ที่มีคะแนนสูงสุด",
     "next_drop": "ดรอปถัดไป",
     "leaderboard": "ลีดเดอร์บอร์ด",
-    "referral_code": "รหัสอ้างอิง",
-    "referral_code_description": "ได้คะแนนจากการแนะนำเพื่อน เมื่อพวกเขาทำการแลกเปลี่ยน $100 ผ่าน Rainbow",
+    "referral_code": "เชิญเพื่อน",
+    "referral_code_description": "รับคะแนนเมื่อเพื่อนที่คุณแนะนำทำการแลกเปลี่ยน $100 ผ่าน Rainbow และรับคะแนนเพิ่ม 10% จากคะแนนที่เพื่อนของคุณได้รับ",
+    "referral_earnings": "%{earnings} คะแนน",
     "copied_referral_code": "คัดลอกรหัสอ้างอิงแล้ว!",
     "copied_referral_link": "คัดลอกลิงก์อ้างอิงแล้ว!",
     "out_of_current_total_points": "จากทั้งหมด %{total} คะแนนปัจจุบัน",
@@ -1455,6 +1470,40 @@
       "your_earnings": "รายได้สัปดาห์ที่แล้วของคุณ",
       "view_breakdown": "ดูการแบ่งรายได้รายสัปดาห์ของคุณ",
       "view_now": "ดูเลย"
+    },
+    "rewards": {
+      "counting_points": "> กำลังนับคะแนนที่ได้รับ...",
+      "calculating_referrals": "> กำลังคำนวณคำแนะนำของคุณ...",
+      "allocating_earnings": "> กำลังจัดสรรรายได้ของคุณ...",
+      "claiming_your_reward": "การอ้างสิทธิ์รางวัลของคุณ",
+      "done": "เสร็จสิ้น",
+      "in_eth": "ใน ETH",
+      "your_rewards": "รางวัลของคุณ",
+      "amount_in_eth": "+ %{amount} ETH",
+      "ready_to_spend": "ETH ของคุณอยู่ในกระเป๋าสตางค์ของคุณและพร้อมใช้งาน คุณพร้อมทุกอย่างแล้ว",
+      "keep_earning": "รับคะแนนและรางวัล Rainbow ของคุณโดยทำการเปลี่ยน, โอนย้าย, minting, แนะนำเพื่อน และอื่น ๆ",
+      "use_rainbow": "ยิ่งคุณใช้งาน Rainbow มากเท่าไรก็จะได้รับรางวัลมากขึ้นเท่านั้น",
+      "choose_claim_network": "เลือกเครือข่ายอ้างสิทธิ์",
+      "coming_soon": "เร็วๆนี้",
+      "available_to_claim": "พร้อมให้อ้างสิทธิ์",
+      "program_earnings": "ผู้ใช้ Rainbow ได้รับ",
+      "my_earnings": "รายได้ของฉัน",
+      "claimed_earnings": "รายได้ที่อ้างสิทธิ์",
+      "current_value": "มูลค่าปัจจุบัน",
+      "earn_eth_rewards": "รับรางวัล ETH",
+      "points_explanation": "ผู้ที่ได้รับคะแนนสูงสุดในแต่ละสัปดาห์จะได้รับการ airdrop ETHของRainbowรายสัปดาห์ที่ได้รับอย่างหนัก รับคะแนนโดยทำการแลกเปลี่ยนหรือทำธุรกรรมใน Rainbow, ใช้ dapps หรือแนะนำเพื่อน",
+      "your_reward_is_ready": "> รางวัลของคุณพร้อมแล้ว",
+      "claim_complete": "> อ้างสิทธิ์เสร็จสมบูรณ์",
+      "already_claimed": "> รางวัลของคุณได้รับการอ้างสิทธิ์ไปแล้ว",
+      "no_claim": "> คุณไม่มีรางวัลที่จะอ้างสิทธิ์ในขณะนี้",
+      "earned_last_week": "ได้รับเมื่อสัปดาห์ที่แล้ว",
+      "my_referrals": "คำแนะนำ",
+      "claim_reward": "อ้างสิทธิ์ %{reward}",
+      "free_to_claim": "อ้างสิทธิ์ฟรี",
+      "has_bridge_fee": "มีค่าธรรมเนียมการโอนย้าย",
+      "claim_failed": "อ้างสิทธิ์ล้มเหลว กรุณาลองอีกครั้ง.",
+      "claim_success_bridge_failed": "อ้างสิทธิ์สำเร็จแต่เงินไม่ได้ถูกโอน.",
+      "my_rewards": "รางวัลของฉัน"
     }
   },
   "speed_up_and_cancel": {
