--- a/static/json/languages/tr_TR.json
+++ b/static/json/languages/tr_TR.json
@@ -439,8 +439,11 @@
       "names": {
         "send": "Gönder",
         "swap": "Takas Et",
+        "bridge": "Bridge",
+        "get": "Al",
         "my_wallets": "Cüzdanlarım",
         "my_contacts": "Kişilerim",
+        "approvals": "Onaylar",
         "my_tokens": "Tokenlerim",
         "my_tokens_watched": "Tokenler",
         "my_nfts": "Benim NFT'lerim",
@@ -473,6 +476,7 @@
         "wallets_and_keys": "Cüzdanlar ve Anahtarlar",
         "view_full_screen": "Tam Ekran Görüntüleme",
         "view_token": "Token Görüntüleme",
+        "view_token_details": "%{symbol} Detaylarını Görüntüle",
         "send_token": "Token Gönderme",
         "swap_token": "Token Takası",
         "copy_token_address": "Token Sözleşme Adresini Kopyala",
@@ -491,14 +495,17 @@
         "disable_flashbots": "Flashbots'i devre dışı bırak"
       },
       "search_tags": {
-        "swap": "köprü",
-        "my_wallets": "değiştir",
-        "my_contacts": "iletişim, kişiler",
+        "swap": "satın al, sat, takas, sipariş, değişim, dex, rotalar",
+        "bridge": "transfer, zincir, rotalar",
+        "get": "takas, köprü",
+        "my_wallets": "benim, değiştir",
+        "my_contacts": "benim",
         "my_tokens_watched": "benim",
         "my_nfts_watched": "benim",
         "view_profile": "profil, galeri, ens, nft'ler",
         "testnet_mode": "değiştir, ağlar, testnets",
         "developer_tools": "değiştir, ağlar, geliştirici, testnets",
+        "approvals": "iptal et, tokenlar, nftler, sözleşmeler",
         "settings": "tercihler",
         "network_settings": "testnets, geliştirici, ağlar",
         "my_qr_code_watched": "benim",
@@ -846,6 +853,7 @@
     "current_base_fee": "Mevcut taban ücreti",
     "max_base_fee": "Maksimum taban ücreti",
     "miner_tip": "Madenci bahşişi",
+    "gas_price": "Gas Fiyatı",
     "max_transaction_fee": "Maksimum işlem ücreti",
     "transaction_speed": "İşlem hızı",
     "cancel": "İptal",
@@ -1267,6 +1275,7 @@
     "activity": "Aktivite",
     "nfts": "NFT'ler",
     "points": "Puanlar",
+    "rewards": "Ödüller",
     "tokens": "Tokenler"
   },
   "activity": {
@@ -1385,12 +1394,18 @@
     "check_back_soon_header": "Yakında Kontrol Et",
     "check_back_soon_description": "Puanlar şu anda kullanılamıyor.\nYakında kontrol edin ve Rainbow Puanları kullanmaya devam edin.",
     "your_rank": "Sıralamanız",
+    "my_points": "Puanlarım",
+    "rank": "Sıralama",
+    "ranking": "%{rank}. Sıra",
     "unranked": "Sıralamasız",
+    "no_weekly_rank": "Haftalık Sıralama Yok",
     "points_to_rank": "%{rank_cutoff} puan ile sıralamaya girin",
+    "top_holders": "En Çok Puan Sahipleri",
     "next_drop": "Sonraki Düşüş",
     "leaderboard": "Lider Tablosu",
-    "referral_code": "Referans Kodu",
-    "referral_code_description": "Arkadaşlarınızı Rainbow üzerinden 100 dolarlık takas yapıldığında puanlar kazanın",
+    "referral_code": "Arkadaşlarını Davet Et",
+    "referral_code_description": "Davetiyelerin %{amount} ile değiştirdiğinde puan kazanacak ve ayrıca davetiyelerinin kazandığı puanların %10'unu kazanacaksın",
+    "referral_earnings": "%{earnings} puan",
     "copied_referral_code": "Referans kodu kopyalandı!",
     "copied_referral_link": "Referans linki kopyalandı!",
     "out_of_current_total_points": "Şu anki toplam puan %{total} üzerinden",
@@ -1455,6 +1470,40 @@
       "your_earnings": "Geçen Haftaki Kazancınız",
       "view_breakdown": "Haftalık kazanç detaylarınızı görüntüleyin",
       "view_now": "Şimdi Görüntüle"
+    },
+    "rewards": {
+      "counting_points": "> Kazanılan puanlar hesaplanıyor...",
+      "calculating_referrals": "> Davetiyelerini hesaplıyor...",
+      "allocating_earnings": "> Kazançlarını paylaştırıyor...",
+      "claiming_your_reward": "ÖDÜLÜNÜ TALİP EDİYORSUN",
+      "done": "Tamam",
+      "in_eth": "ETH ile",
+      "your_rewards": "Ödüllerin",
+      "amount_in_eth": "+ %{amount} ETH",
+      "ready_to_spend": "ETH'n cüzdanında ve harcamaya hazır. Her şey tamam.",
+      "keep_earning": "Swaping, köprüleme, madeni para basma, arkadaşlarını davet etme ve daha fazlası ile puan kazanmaya devam et",
+      "use_rainbow": "Rainbow'yi ne kadar çok kullanırsan, o kadar çok ödüllendirileceksin",
+      "choose_claim_network": "Stake Ağı Seç",
+      "coming_soon": "Çok yakında",
+      "available_to_claim": "Talep Edilebilir",
+      "program_earnings": "Rainbow kullanıcıları kazandı",
+      "my_earnings": "Kazançlarım",
+      "claimed_earnings": "Talep Edilen Kazançlar",
+      "current_value": "Mevcut Değer",
+      "earn_eth_rewards": "ETH Ödülü Kazan",
+      "points_explanation": "En iyi haftalık puan kazananlar Rainbow'nin kendi kazandığı ETH'den haftalık airdrop alacak. Rainbow'da takas veya işlem yaparak, dapp'leri kullanarak veya arkadaşlarını davet ederek puan topla.",
+      "your_reward_is_ready": "> Ödülün hazır",
+      "claim_complete": "> Talep Tamamlandı",
+      "already_claimed": "> Ödülün daha önce talep edildi",
+      "no_claim": "> Bu zamanda talep edilecek ödülün yok",
+      "earned_last_week": "Geçen Hafta Kazanılan",
+      "my_referrals": "Referanslar",
+      "claim_reward": "%{reward} Talep Et",
+      "free_to_claim": "Ücretsiz Talep Edilir",
+      "has_bridge_fee": "Köprü Ücreti Var",
+      "claim_failed": "Talep Başarısız. Lütfen tekrar deneyin.",
+      "claim_success_bridge_failed": "Talep Başarılı Ama Fonlar Köprülenmedi.",
+      "my_rewards": "Ödüllerim"
     }
   },
   "speed_up_and_cancel": {
