--- a/static/json/languages/zh_CN.json
+++ b/static/json/languages/zh_CN.json
@@ -439,8 +439,11 @@
       "names": {
         "send": "发送",
         "swap": "交换",
+        "bridge": "桥接",
+        "get": "获取",
         "my_wallets": "我的钱包",
         "my_contacts": "我的联系人",
+        "approvals": "授权",
         "my_tokens": "我的代币",
         "my_tokens_watched": "代币",
         "my_nfts": "我的NFTs",
@@ -473,6 +476,7 @@
         "wallets_and_keys": "钱包及密钥",
         "view_full_screen": "全屏查看",
         "view_token": "查看代币",
+        "view_token_details": "查看 %{symbol} 详情",
         "send_token": "发送代币",
         "swap_token": "交换代币",
         "copy_token_address": "复制代币合约地址",
@@ -491,14 +495,17 @@
         "disable_flashbots": "禁用Flashbots"
       },
       "search_tags": {
-        "swap": "桥接",
-        "my_wallets": "切换",
-        "my_contacts": "联系人, 通讯录",
+        "swap": "买, 卖, 交易, 订单, 兑换, dex, 路线",
+        "bridge": "转账, 链, 路线",
+        "get": "交换, 桥接",
+        "my_wallets": "我的, 切换",
+        "my_contacts": "我的",
         "my_tokens_watched": "我的",
         "my_nfts_watched": "我的",
         "view_profile": "档案, 画廊, ENS, NFTs",
         "testnet_mode": "切换，网络，测试网",
         "developer_tools": "切换，网络，开发者，测试网",
+        "approvals": "撤销，令牌，NFT，合约",
         "settings": "偏好设置",
         "network_settings": "测试网，开发者，网络",
         "my_qr_code_watched": "我的",
@@ -846,6 +853,7 @@
     "current_base_fee": "当前基础费用",
     "max_base_fee": "最高基础费用",
     "miner_tip": "矿工小费",
+    "gas_price": "Gas价格",
     "max_transaction_fee": "最高交易费用",
     "transaction_speed": "交易速度",
     "cancel": "取消",
@@ -1267,6 +1275,7 @@
     "activity": "活动",
     "nfts": "NFTs",
     "points": "积分",
+    "rewards": "奖励",
     "tokens": "代币"
   },
   "activity": {
@@ -1385,12 +1394,18 @@
     "check_back_soon_header": "敬请期待",
     "check_back_soon_description": "积分暂时不可用。\n请稍后查看，继续使用彩虹积分。",
     "your_rank": "您的排名",
+    "my_points": "我的积分",
+    "rank": "排名",
+    "ranking": "排名 #%{rank}",
     "unranked": "未排名",
+    "no_weekly_rank": "无每周排名",
     "points_to_rank": "%{rank_cutoff} 积分即可晋级",
+    "top_holders": "顶级积分持有者",
     "next_drop": "下一轮空投",
     "leaderboard": "排行榜",
-    "referral_code": "推荐码",
-    "referral_code_description": "邀请朋友通过Rainbow完成100美元交换可赚取积分",
+    "referral_code": "推荐朋友",
+    "referral_code_description": "当您的推荐人在 Rainbow 上交易 $100 后赚取积分，还可赚取您的推荐人获得积分的 10%",
+    "referral_earnings": "%{earnings} 积分",
     "copied_referral_code": "推荐码已复制！",
     "copied_referral_link": "推荐链接已复制！",
     "out_of_current_total_points": "共 %{total} 当前总积分",
@@ -1455,6 +1470,40 @@
       "your_earnings": "上周收益",
       "view_breakdown": "查看您的每周收益明细",
       "view_now": "立即查看"
+    },
+    "rewards": {
+      "counting_points": "> 正在计算获得的积分...",
+      "calculating_referrals": "> 计算您的推荐人...",
+      "allocating_earnings": "> 分配您的收益...",
+      "claiming_your_reward": "领取您的奖励",
+      "done": "完成",
+      "in_eth": "以 ETH",
+      "your_rewards": "您的奖励",
+      "amount_in_eth": "+ %{amount} ETH",
+      "ready_to_spend": "您的 ETH 已在您的钱包中，可以随时使用。",
+      "keep_earning": "通过交换、桥接、铸造、推荐朋友等方式继续赚取积分和 Rainbow 奖励",
+      "use_rainbow": "您使用 Rainbow 越多，奖励就越多",
+      "choose_claim_network": "选择领取网络",
+      "coming_soon": "即将上线",
+      "available_to_claim": "可领取",
+      "program_earnings": "Rainbow 用户已经赚取",
+      "my_earnings": "我的收益",
+      "claimed_earnings": "已领取的收益",
+      "current_value": "当前价值",
+      "earn_eth_rewards": "赚取 ETH 奖励",
+      "points_explanation": "每周顶级积分获得者将每周空投 Rainbow 的自己辛苦赚来的 ETH。通过在 Rainbow 中交换或交易、使用 dapp 或推荐朋友来收集积分。",
+      "your_reward_is_ready": "> 您的奖励已准备好",
+      "claim_complete": "> 领取完成",
+      "already_claimed": "> 您的奖励已经被领取",
+      "no_claim": "> 您此时没有可领取的奖励",
+      "earned_last_week": "上周赚取",
+      "my_referrals": "推荐",
+      "claim_reward": "领取 %{reward}",
+      "free_to_claim": "免费领取",
+      "has_bridge_fee": "有桥接费用",
+      "claim_failed": "领取失败。 请重试。",
+      "claim_success_bridge_failed": "领取成功但资金未桥接。",
+      "my_rewards": "我的奖励"
     }
   },
   "speed_up_and_cancel": {
